--- a/package.json
+++ b/package.json
@@ -35,9 +35,7 @@
     "react-quilljs": "^1.3.3",
     "react-redux": "^8.0.5",
     "slugify": "^1.6.5",
-    "spark-md5": "^3.0.2"
-  },
-  "devDependencies": {
+    "spark-md5": "^3.0.2",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4"
