--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@next/font": "13.1.0",
     "@reduxjs/toolkit": "^1.9.1",
+    "autoprefixer": "^10.4.13",
     "axios": "^1.2.1",
     "bcrypt": "^5.1.0",
     "cookies-next": "^2.1.1",
@@ -27,17 +28,16 @@
     "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0",
     "mongoose": "^6.8.1",
-    "next": "13.1.0",
+    "next": "^13.1.0",
     "next-auth": "^4.18.7",
     "plaiceholder": "^2.5.0",
+    "postcss": "^8.4.20",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-quilljs": "^1.3.3",
     "react-redux": "^8.0.5",
     "slugify": "^1.6.5",
     "spark-md5": "^3.0.2",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4"
   }
 }
