--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "postcss": "^8.4.20",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
+    "react-quill": "^2.0.0",
     "react-quilljs": "^1.3.3",
     "react-redux": "^8.0.5",
     "slugify": "^1.6.5",
